# dna-tool

./: .gitignore  README.md  analyze.py  pyproject.toml
data/: example.fasta
dna_toolkit/: __init__.py  io.py  kmer.py  sequence.py
tests/: test_sequence.py
